--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
     <section class="background firstsection">
         <div class="box-main">
             <div class="firsthalf">
-                <p class="text-big">The Future Of Education Is Here</p>
-                <p class="text-small">this is a website which promotes online learning</p>
+                <p class="text-big">Beat the heat this summer, enroll in what you've always wanted to learn.</p>
+                <p class="text-small">Join now for our virtual summer workshop.</p>
                 <div class="buttons">
             
                     <button class="btn"><a href="data.html" target="_blank">Enroll Now</a></button>
